removed node_modules, added to package.json bootstrap and configure store with reduxDevTools

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,9 @@
   <body ng-app="app" ng-strict-di ng-cloak>
 
     <!-- Our app entry point, everything will be generated here-->
-    <div ui-view></div>
+    <div ui-view>
+
+</div>
 
   </body>
 </html>
